# abstract-positions-accounting-test

./: CMakeLists.txt  ConsoleInterface.cpp  ConsoleInterface.h  Position.cpp  Position.h  PositionList.cpp  PositionList.h  README.md  main.cpp
AbstractPositionsAccounting/: ConsoleInterface.cpp  PositionList.cpp  PositionList.h  doc.h
